--- a/templates/center/center_list.html
+++ b/templates/center/center_list.html
@@ -11,9 +11,9 @@
     <h3 class="text-center">
       <i class="fas fa-map-marker-alt"></i> Center List
     </h3>
-    <a href="#"><i class="fas fa-plus"></i> Create Center</a>
+    <a href="{% url 'center:create' %}"><i class="fas fa-plus"></i> Create Center</a>
   </div>
-
+  
   <table class="table table-responsive table-hover">
     <thead>
       <tr>
@@ -23,15 +23,15 @@
     </thead>
     
     <tbody>
-      {% for object in centers %}
+      {% for object in page_obj %}
       <tr>
         <td>{{object.name|upper}}</td>
-        <td><a href="#" class="btn-sm btn-outline-primary">View Details</a></td>
+        <td><a href="{% url 'center:detail' object.pk %}" class="btn-sm btn-outline-primary">View Details</a></td>
       </tr>
       {% endfor %}
     </tbody>
     
   </table>
-
+{% include "components/paginator.html" %}
 </div>
 {% endblock content %}
